# multirobot_vfan

./: .gitignore  README.md  forward_inverse.slx  inv_jacob.m  pytest.ini  requirements.txt  todo.md
.github/ISSUE_TEMPLATE/: issue.md
matlab/: forward_inverse.slx  myplot.m
nav_core/: package.xml  setup.py
nav_core/launch/: launch.py
nav_core/nav_core/: ClusterNode.py  Robot.py  RobotNode.py
navigation_core/: package.xml  setup.py
navigation_core/launch/: simulation_launch.py
navigation_core/navigation_core/: ClusterNode.py  RobotNode.py  Topics.py
old/cluster_controller_old/src/: Sparsifier.cpp  SparsifierNode.cpp
sim_field/: package.xml  setup.cfg
sim_field/sim_field/: SimFieldNode.py  simulated_field.py
simulation_field/: package.xml  setup.cfg  setup.py
src/: SensorReadingsStamped.py  SimulatedField.py
src/Robot/: Robot.py
src/SimulatedField/: SimulatedField.py  test_ExtremaSeeking.py  test_SimulatedField.py
src/cluster_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/cluster_controller/cluster_controller/: ClusterController.py  (+1 more)
src/cluster_controller_old/: CMakeLists.txt  package.xml
src/custom_msgs/: CMakeLists.txt  package.xml
src/nav_core/: package.xml  setup.cfg  setup.py
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/include/robot_controller/: Controller.h  RobotNode.h
src/robot_controller/launch/: launch.py
src/robot_controller/src/: Controller.cpp  RobotNode.cpp
src/sim_field/: package.xml  setup.py
src/sim_world/: package.xml  setup.cfg  setup.py
test/: test_Map.py
(+15 files in other folders)
